--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "an expense tracker application ",
   "main": "app.js",
   "engines": {
-    "node": "12.17.0"
+    "node": "12.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
