--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon --experimental-modules app.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
